<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/f1"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/btnBack"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/purple_500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/purple_200"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnScore"
        android:layout_width="122dp"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/data6"
        app:layout_constraintEnd_toStartOf="@id/btnSend"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgEyes"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/eye" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data4"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/imgEyes"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/m1"
        android:layout_width="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt"
        android:layout_marginTop="18dp"
        android:background="@drawable/shape_red"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:padding="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data5"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/m1"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>




    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/verfied_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="33dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#fff"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="122dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/data7"
        app:layout_constraintStart_toEndOf="@id/btnScore"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>