<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/grad"
    android:layout_height="match_parent">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/f1"
                    android:layout_width="match_parent"
                    android:layout_height="76dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/baseline_arrow_back_ios_new_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="?selectableItemBackgroundBorderless"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/btnBack"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/purple_500" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/information"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/purple_200"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:layout_constraintTop_toBottomOf="@id/f1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:id="@+id/img"
                    android:src="@drawable/qandli"/>


                <TextView
                    android:id="@+id/txtDR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drInfo"
                    app:layout_constraintTop_toBottomOf="@id/img"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/black"
                   android:padding="8dp"/>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:layout_constraintTop_toBottomOf="@id/txtDR"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="8dp"
                    android:id="@+id/img2"
                    android:src="@drawable/qandli2"/>



                <TextView
                    android:id="@+id/txtFind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/findriskInfo"
                    app:layout_constraintTop_toBottomOf="@id/img2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/black"
                    android:padding="8dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>